--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dojo/easydi",
+  "name": "@denpolischuk/easydi",
   "version": "0.0.1",
   "description": "Simple and pretty dependency injection tool for TypeScript",
   "main": "index.js",
@@ -21,5 +21,8 @@
     "@types/node": "^16.3.1",
     "tsc": "^2.0.3",
     "typescript": "^4.3.5"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
